Fix alignment

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -31,7 +31,6 @@ variant-list .quantity__button {
 @media screen and (min-width: 750px) {
   .variant-list__total {
     position: sticky;
-    justify-content: space-between;
     bottom: 0;
     z-index: 1;
     background-color: rgb(var(--color-background));
@@ -505,6 +504,9 @@ variant-list-remove-button {
 @media screen and (max-width: 749px) {
   .totals__product-total {
     display: flex;
+  }
+
+  .variant-list-total {
     padding-top: 2rem;
   }
 
